--- a/PatholabWorkList/Properties/Resources.resx
+++ b/PatholabWorkList/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="scannedReferenceIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scannedReferenceIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="clinicalDetailsIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clinicalDetailsIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
